--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #2e2e2e;
+  background: #484848;
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
