--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -142,3 +142,28 @@
 .navbar-header.navbar-open .navbar-toggle {
   display: none;
 }
+
+.navbar-link {
+  color: #fff;
+  font-size: 1.1rem;
+  text-decoration: none;
+  transition: color 0.2s;
+  width: 100%;
+  display: block;
+  text-align: left;
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+}
+
+.navbar-link:hover,
+.navbar-link.active {
+  font-weight: bold;
+  color: #ffd54f;
+}
+
+.navbar-link.navbar-logout {
+  font-weight: bold;
+}
